<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/mainViewPage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/mainguideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />

    <LinearLayout
        android:id="@+id/mainlinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bottomNavi"
        android:baselineAligned="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainguideline">
        <com.huanyu.wuthelper.myview.CustomNaviItemView
            android:padding="5dp"
            android:id="@+id/bottomNav1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:NaviItemImageSrc="@drawable/navi_course_selector"
            app:NaviItemText="@string/main_bottom_course"/>
        <com.huanyu.wuthelper.myview.CustomNaviItemView
            android:padding="5dp"
            android:id="@+id/bottomNav2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:NaviItemImageSrc="@drawable/navi_service_selector"
            app:NaviItemText="@string/main_bottom_service"/>
        <com.huanyu.wuthelper.myview.CustomNaviItemView
            android:padding="5dp"
            android:id="@+id/bottomNav3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:NaviItemImageSrc="@drawable/navi_home_selector"
            app:NaviItemText="@string/main_bottom_home"/>
        <com.huanyu.wuthelper.myview.CustomNaviItemView
            android:padding="5dp"
            android:id="@+id/bottomNav4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:NaviItemImageSrc="@drawable/navi_tool_selector"
            app:NaviItemText="@string/main_bottom_tools"/>
        <com.huanyu.wuthelper.myview.CustomNaviItemView
            android:padding="5dp"
            android:id="@+id/bottomNav5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:NaviItemImageSrc="@drawable/navi_my_selector"
            app:NaviItemText="@string/main_bottom_my"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>