<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SearchActivity">
    <TextView
        android:id="@+id/MyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/locationSearch_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <android.widget.Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextSearch"
        android:layout_margin="5dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/locationSearch_search"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MyTitle" />
    <android.widget.Button
        android:id="@+id/areaSpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationSearch_area"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/MyTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/locationSearch_TextSearch"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/areaSpin"
        app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
        app:layout_constraintStart_toEndOf="@id/areaSpin"
        app:layout_constraintTop_toBottomOf="@id/MyTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>