<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/popup_background">

    <TextView
        android:id="@+id/importCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/menu_import_course"
        android:clickable="true"
        android:focusable="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/mylistcellGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/importCourse"
        app:layout_constraintEnd_toEndOf="@id/importCourse"/>

    <TextView
        android:id="@+id/setList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/menu_set_course"
        android:clickable="true"
        android:textSize="18sp"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/importCourse"/>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/mylistcellGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setList"
        app:layout_constraintEnd_toEndOf="@id/importCourse"/>

    <TextView
        android:id="@+id/courseList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/menu_course_list"
        android:clickable="true"
        android:textSize="18sp"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setList"/>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/mylistcellGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseList"
        app:layout_constraintEnd_toEndOf="@id/importCourse"/>

    <TextView
        android:id="@+id/courseEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/menu_course_edit"
        android:clickable="true"
        android:textSize="18sp"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseList"/>
</androidx.constraintlayout.widget.ConstraintLayout>